--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Telstra payload parser",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon index.js -e js",
     "lint": "eslint --ext ts .",
     "test": "jest --coverage",
     "build:staging": "NODE_ENV=development webpack --config ./webpack.config.js",
@@ -21,6 +22,7 @@
     "express": "^4.18.2",
     "jest": "^29.5.0",
     "joi": "^17.8.3",
+    "nodemon": "^2.0.21",
     "ts-loader": "^9.4.2"
   },
   "devDependencies": {
