--- a/package.json
+++ b/package.json
@@ -21,14 +21,24 @@
   "dependencies": {
     "express": "^4.18.2",
     "jest": "^29.5.0",
+    "jest-fetch-mock": "^3.0.3",
     "joi": "^17.8.3",
     "nodemon": "^2.0.21",
+    "ts-jest": "^29.0.5",
     "ts-loader": "^9.4.2"
   },
   "devDependencies": {
+    "@types/jest": "^29.4.0",
     "@typescript-eslint/eslint-plugin": "^5.54.1",
     "@typescript-eslint/parser": "^5.54.1",
     "eslint": "^8.35.0",
     "webpack-cli": "^5.0.1"
+  },
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "node",
+    "moduleNameMapper": {
+      "^@lib(.*)$": "<rootDir>/lib/$1"
+    }
   }
 }
